--- a/daftar.html
+++ b/daftar.html
@@ -58,8 +58,28 @@
 
     iframe {
       width: 100%;
-      height: 1100px;
+      height: 1200px;
       border: none;
+    }
+
+    .kembali-btn {
+      text-align: center;
+      margin-top: 30px;
+    }
+
+    .kembali-btn a {
+      background-color: #2d6a4f;
+      color: white;
+      padding: 12px 20px;
+      border-radius: 8px;
+      text-decoration: none;
+      font-weight: 600;
+      display: inline-block;
+      transition: background-color 0.3s ease;
+    }
+
+    .kembali-btn a:hover {
+      background-color: #1b4332;
     }
 
     footer {
@@ -90,9 +110,18 @@
 
   <section>
     <h2 style="text-align:center;">Formulir Pendaftaran Siswa Baru</h2>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScA5N5em-M4Gt7WplpmLcZQIW5uY33JCTopAWgubDC3Rlrx_Q/viewform?embedded=true">
+    <p style="text-align: center; font-size: 1.1em; margin-bottom: 30px;">
+      Silakan isi formulir berikut dengan lengkap dan benar. Pastikan Anda menggunakan email yang aktif.
+    </p>
+
+    <iframe 
+      src="https://docs.google.com/forms/d/e/1FAIpQLScA5N5em-M4Gt7WplpmLcZQIW5uY33JCTopAWgubDC3Rlrx_Q/viewform?embedded=true">
       Memuat…
     </iframe>
+
+    <div class="kembali-btn">
+      <a href="index.html">Kembali ke Beranda</a>
+    </div>
   </section>
 
   <footer>
