--- a/daftar.html
+++ b/daftar.html
@@ -31,6 +31,7 @@
       background-color: #40916c;
       padding: 12px;
       text-align: center;
+      flex-wrap: wrap;
     }
 
     nav a {
@@ -41,6 +42,7 @@
       padding: 8px 14px;
       border-radius: 6px;
       transition: background 0.3s ease;
+      display: inline-block;
     }
 
     nav a:hover {
@@ -58,28 +60,8 @@
 
     iframe {
       width: 100%;
-      height: 1200px;
+      height: 1100px;
       border: none;
-    }
-
-    .kembali-btn {
-      text-align: center;
-      margin-top: 30px;
-    }
-
-    .kembali-btn a {
-      background-color: #2d6a4f;
-      color: white;
-      padding: 12px 20px;
-      border-radius: 8px;
-      text-decoration: none;
-      font-weight: 600;
-      display: inline-block;
-      transition: background-color 0.3s ease;
-    }
-
-    .kembali-btn a:hover {
-      background-color: #1b4332;
     }
 
     footer {
@@ -88,6 +70,27 @@
       text-align: center;
       padding: 15px;
       margin-top: 50px;
+    }
+
+    /* MEDIA QUERY UNTUK HP */
+    @media (max-width: 600px) {
+      nav a {
+        display: block;
+        margin: 8px 0;
+      }
+
+      .logo {
+        width: 70px;
+      }
+
+      section {
+        margin: 20px 10px;
+        padding: 15px;
+      }
+
+      iframe {
+        height: 1250px;
+      }
     }
   </style>
 </head>
@@ -110,18 +113,9 @@
 
   <section>
     <h2 style="text-align:center;">Formulir Pendaftaran Siswa Baru</h2>
-    <p style="text-align: center; font-size: 1.1em; margin-bottom: 30px;">
-      Silakan isi formulir berikut dengan lengkap dan benar. Pastikan Anda menggunakan email yang aktif.
-    </p>
-
-    <iframe 
-      src="https://docs.google.com/forms/d/e/1FAIpQLScA5N5em-M4Gt7WplpmLcZQIW5uY33JCTopAWgubDC3Rlrx_Q/viewform?embedded=true">
+    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScA5N5em-M4Gt7WplpmLcZQIW5uY33JCTopAWgubDC3Rlrx_Q/viewform?embedded=true">
       Memuat…
     </iframe>
-
-    <div class="kembali-btn">
-      <a href="index.html">Kembali ke Beranda</a>
-    </div>
   </section>
 
   <footer>
