--- a/kontak.html
+++ b/kontak.html
@@ -144,6 +144,58 @@
     a.back-link:hover {
       background: #1b4332;
     }
+
+    /* RESPONSIVE MEDIA QUERY UNTUK HP */
+    @media (max-width: 600px) {
+      header {
+        padding: 20px 10px;
+      }
+
+      .logo {
+        width: 70px;
+        margin-bottom: 5px;
+      }
+
+      h1 {
+        font-size: 20px;
+      }
+
+      nav a {
+        display: block;
+        margin: 8px 0;
+      }
+
+      section {
+        padding: 20px 10px;
+      }
+
+      h2 {
+        font-size: 22px;
+      }
+
+      .contact-info, .contact-form {
+        padding: 15px;
+      }
+
+      .contact-form input,
+      .contact-form textarea {
+        font-size: 16px;
+      }
+
+      iframe {
+        height: 200px;
+      }
+
+      .whatsapp-button {
+        padding: 10px 16px;
+        font-size: 14px;
+      }
+
+      a.back-link {
+        font-size: 14px;
+        padding: 8px 16px;
+      }
+    }
   </style>
 </head>
 <body>
