--- a/kontak.html
+++ b/kontak.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Kontak Kami - Madrasah Ibtidaiyah Nurul Haq Oesalaen</title>
+  <title>Kontak Kami - Yayasan Nurul Haq Oesalaen</title>
   <link rel="stylesheet" href="assets/aos/aos.css" />
 
   <style>
@@ -202,7 +202,7 @@
 
   <header data-aos="fade-down">
     <img src="assets/logo.png" alt="Logo Madrasah" class="logo" />
-    <h1>Madrasah Ibtidaiyah Nurul Haq Oesalaen</h1>
+    <h1>Yayasan Nurul Haq Oesalaen</h1>
     <p>Mendidik dengan Hati dan Ilmu</p>
   </header>
 
@@ -255,7 +255,7 @@
   </section>
 
   <footer data-aos="fade-up" data-aos-delay="600">
-    <p>&copy; 2025 Madrasah Ibtidaiyah Nurul Haq Oesalaen</p>
+    <p>&copy; 2025 Yayasan Nurul Haq Oesalaen</p>
   </footer>
 
   <script src="assets/aos/aos.js"></script>
